cmake_minimum_required(VERSION 2.8)
project( EKG )
set (CMAKE_CXX_STANDARD 11)
find_package( OpenCV REQUIRED )
find_package(Ceres REQUIRED)
find_package(gflags REQUIRED)
include_directories(${CERES_INCLUDE_DIRS})
add_executable( ekg ekg.cc )
target_link_libraries( ekg ${OpenCV_LIBS} ${CERES_LIBRARIES} ${gflags_LIBRARIES})
